opam-version: "2.0"
maintainer: "Troppydash"
authors: ["Troppydash"]
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Submission for the Advent of FPGA event"
description: "
A submission for the Advent of FPGA solving a few Advent of Code problems
"
